<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AF4B4B"
    android:backgroundTint="#B5AEC8"
    tools:context=".AddCardActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="249dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_in_answer_here"
        android:inputType="textPersonName"
        android:singleLine="false"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/hint"
        android:src="@drawable/ic_iconmonstr_x_mark_5" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="91dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/type_in_question_here"
        android:inputType="textMultiLine" />

    <ImageView
        android:id="@+id/save"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/hint"
        android:src="@drawable/ic_iconmonstr_save_2" />

</RelativeLayout>