<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/addNewActivity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
    android:layout_alignParentBottom="true"
    android:contentDescription="@string/hint"
    android:src="@drawable/ic_iconmonstr_plus_6" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:layout_marginEnd="7dp"
        android:contentDescription="@string/hint"
        android:src="@drawable/ic_next" />

    <ImageView
        android:id="@+id/deleteBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/hint"
        android:src="@drawable/ic_iconmonstr_trash_can_15" />

    <TextView
        android:id="@+id/flashcard_question"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="19dp"
        android:text="@string/who_is_the_president_of_russia"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/flashcard_answer"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="19dp"
        android:text="@string/vladmir_putin"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="invisible"
        tools:ignore="DuplicateIds" />
</RelativeLayout>